package com.chargemate.domain;

public class FavoriteStation {
    public Long getDriverId() { return 1L; }
    public Long getStationId() { return 1L; }
} 