package com.chargemate.domain;

public class Location {
    public void setLatitude(double lat) {}
    public void setLongitude(double lon) {}
    public void setAddress(String addr) {}
    public void setCity(String city) {}
    public void setCountry(String c) {}
} 