package com.chargemate.domain;

public enum ReservationStatus {
    PENDING, CONFIRMED, CANCELLED, COMPLETED
} 