package com.chargemate.domain;

public enum SessionStatus {
    ACTIVE, COMPLETED, CANCELLED
} 