package com.chargemate.domain;

public enum SlotStatus {
    AVAILABLE, OCCUPIED, RESERVED, MAINTENANCE
} 