package com.chargemate.domain;

public class StationOperator extends User {
    public void setId(Long id) { super.setId(id); }
    public void setCompanyName(String c) {}
    public void setTaxId(String t) {}
} 