package com.chargemate.domain;

public enum StationStatus {
    ACTIVE, INACTIVE, MAINTENANCE
} 