package com.chargemate.domain;

public class Vehicle {
    public void setId(Long id) {}
    public void setLicensePlate(String lp) {}
    public void setModel(String m) {}
    public void setBrand(String b) {}
    public void setBatteryCapacity(double c) {}
} 