@startuml ChargeMate Domain Model (Simplified)

' User hierarchy
abstract class User {
  -id: Long
  -email: String
  -password: String
  -name: String
  -createdAt: DateTime
  -updatedAt: DateTime
}

class EVDriver extends User {
}

class StationOperator extends User {
  -companyName: String
  -taxId: String
}

' Vehicle
class Vehicle {
  -id: Long
  -licensePlate: String
  -model: String
  -brand: String
  -batteryCapacity: Double
}

' Charging Station
class ChargingStation {
  -id: Long
  -name: String
  -location: Location
  -status: StationStatus
  -operatorId: Long
}

' Location
class Location {
  -latitude: Double
  -longitude: Double
  -address: String
  -city: String
  -country: String
}

' Charging Slot
class ChargingSlot {
  -id: Long
  -stationId: Long
  -slotNumber: Integer
  -status: SlotStatus
  -powerRating: Double
  -connectorType: String
  -pricePerHour: Double
}

' Reservation
class Reservation {
  -id: Long
  -driverId: Long
  -slotId: Long
  -startTime: DateTime
  -endTime: DateTime
  -status: ReservationStatus
}

' Charging Session
class ChargingSession {
  -id: Long
  -reservationId: Long
  -startTime: DateTime
  -endTime: DateTime
  -energyConsumed: Double
  -status: SessionStatus
}

' Favorite Station
class FavoriteStation {
  -id: Long
  -driverId: Long
  -stationId: Long
}

' Analytics (KPIs)
class Analytics {
  -stationId: Long
  -totalSessions: Int
  -totalEnergyDelivered: Double
  -averageSessionDuration: Double
}

' Payment (External)
class Payment {
  -id: Long
  -sessionId: Long
  -amount: Double
  -status: PaymentStatus
  -paymentMethod: String
  -transactionId: String
}

' Enums
enum StationStatus {
  ACTIVE
  INACTIVE
  MAINTENANCE
}

enum SlotStatus {
  AVAILABLE
  OCCUPIED
  RESERVED
  MAINTENANCE
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
}

enum SessionStatus {
  ACTIVE
  COMPLETED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  REFUNDED
}

' Relationships
EVDriver "1" -- "*" Vehicle : owns
StationOperator "1" -- "*" ChargingStation : manages
ChargingStation "1" -- "*" ChargingSlot : contains
ChargingStation "1" -- "1" Location : has
EVDriver "1" -- "*" Reservation : makes
ChargingSlot "1" -- "*" Reservation : has
Reservation "1" -- "0..1" ChargingSession : generates
ChargingSession "1" -- "0..1" Payment : triggers
EVDriver "1" -- "*" FavoriteStation : marks
FavoriteStation "*" -- "1" ChargingStation : favorite
ChargingStation "1" -- "0..1" Analytics : has KPIs

@enduml 